fix(news): add pagination and search to news list page
- Add NewsJpaRepository.findAllByKeyword() with @Query for keyword filtering
- Add NewsRepository.findAll(keyword, pageable) domain method
- Implement in NewsRepositoryAdapter using PageableMapper.toSpring()
- Rewrite NewsController.list() to use Spring Pageable + keyword param
- Rewrite templates/common/news/list.html with HTMX search + pagination fragment
- Fix NewsWebMapper: add @AfterMapping to set id/version (Lombok @Builder
  does not include inherited BaseAuditResponse fields in generated builder)

fix(approval): rename URL mapping from /approval to /common/approval

- Update @RequestMapping in ApprovalController to /common/approval
- Update hx-get in templates/fragments/approval.html
- Update fetch() URL in static/js/approval/signature-capture.js

feat(approval): add list endpoint GET /common/approval

- Add ApprovalRequestJpaRepository.findByStatus() with @EntityGraph
- Add ApprovalRequestJpaRepository.countByStatus()
- Add ApprovalRequestRepository.findPendingApprovals() and countPendingApprovals()
- Implement in ApprovalRequestRepositoryImpl
- Add ApprovalController.list() mapping GET /common/approval
- Create templates/common/approval/list.html with table and pagination

feat(dashboard): add News and Approval cards to dashboard

- Inject NewsRepository and ApprovalRequestRepository into DashboardController
- Load 5 latest published news (guarded by DASHBOARD_NEWS authority)
- Load pending approval count (guarded by DASHBOARD_APPROVAL authority)
- Update templates/dashboard/index.html with new cards using sec:authorize
- Add xmlns:sec namespace to dashboard template

feat(migration): add V36 dashboard permission seeds

- Create V36__Add_Dashboard_Permissions.sql
- Add DASH-01 permission group for Dashboard
- Seed DASHBOARD_NEWS and DASHBOARD_APPROVAL permissions
- Grant both to ROLE_ADMIN

fix(migration): update COM-02 url_path to /common/approval in V35

chore(i18n): add missing i18n keys for news/ap